fixed some small spacing issues

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,8 @@
   --spacing-md: 1rem; /* 16px */
   --spacing-lg: 1.5rem; /* 24px */
   --spacing-xl: 2rem; /* 32px */
-  --spacing-2xl: 3rem; /* 48px */
+  --spacing-2xl: 2.5rem; /* 40px */
+  --spacing-3xl: 3rem; /* 48px */
   
   /* Border radius */
   --border-radius: 0.3125rem; /* 5px */
@@ -89,18 +90,18 @@ body {
 /* Container */
 .container {
   width: 100%;
-  max-width: 57.5rem; /* 920px */
-  margin: 0 auto;
+  /* max-width: 57.5rem; /* 920px */
+  /*margin: 0 auto; */
 }
 
 /* Calculator */
 .calculator {
   background-color: var(--color-white);
   border-radius: var(--border-radius-lg);
-  padding: var(--spacing-xl);
+  padding: var(--spacing-xl) var(--spacing-2xl);
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: var(--spacing-2xl);
+  gap: var(--spacing-3xl);
   box-shadow: 0 0.25rem 1rem rgba(0, 0, 0, 0.1);
 }
 
@@ -232,7 +233,7 @@ body {
 .calculator__results-section {
   background-color: var(--color-green-900);
   border-radius: var(--border-radius-lg);
-  padding: var(--spacing-xl);
+  padding: var(--spacing-lg);
   display: grid;
 
   align-content: space-between;
@@ -300,22 +301,7 @@ body {
   opacity: 0.4;
 }
 
-/* Attribution */
-.attribution {
-  margin-top: var(--spacing-xl);
-  font-size: 0.6875rem; /* 11px */
-  text-align: center;
-  color: var(--color-grey-500);
-}
 
-.attribution a {
-  color: var(--color-primary);
-  text-decoration: none;
-}
-
-.attribution a:hover {
-  text-decoration: underline;
-}
 
 /* Responsive Design */
 @media (max-width: 48rem) { /* 768px */
